Fixed the cards so that they align and size better

--- a/cheat-sheet/code/index.css
+++ b/cheat-sheet/code/index.css
@@ -51,22 +51,18 @@ header h2 {
   
   .card-container{
     display: flex; 
-    justify-content: center; 
+    justify-content: space-between; 
     flex-wrap: nowrap; 
     overflow: hidden;
-    padding: 0 10px;
     margin-top: 10px;
-    width: 90%; 
+    width: 70%; 
     margin: 0 auto;
+    align-items: center;
 }
 
 .card{
-    background-color: rgb(240, 240, 240);
-    border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-    margin: 20 px;
-    flex: 0 1 calc(33.333% - 40px);
+    flex: 0 1 calc(25%);
 }
 
 .card img{
